welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:7: error: not found: value i
		T(i) = getCouleurSol();avance();
                  ^